Fresh fetsch from VIX

--- a/lib/python/Plugins/SystemPlugins/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/Makefile.am
@@ -5,8 +5,7 @@ SUBDIRS = SoftwareManager PositionerSetup Satfinder \
 	DefaultServicesScanner CommonInterfaceAssignment \
 	FastScan HdmiCEC VideoClippingSetup \
 	VideoEnhancement WirelessLan NetworkWizard \
-	ConfigurationBackup OSD3DSetup VFDGiga SkinSelector DeviceManager \
-	SwapManager WirelessAccessPoint
+	SABnzbdSetup
 
 if XTREND
 SUBDIRS += SatelliteEquipmentControl DiseqcTester
