--- a/data/fonts/Makefile.am
+++ b/data/fonts/Makefile.am
@@ -1,8 +1,4 @@
 installdir = $(datadir)/fonts
 
 dist_install_DATA = \
-	ae_AlMateen.ttf \
-	andale.ttf \
-	lcd.ttf \
-	md_khmurabi_10.ttf \
-	nmsbd.ttf
+	*.ttf 
