modified:   configure.ac 	modified:   data/Nobile/Makefile.am

--- a/data/Nobile/Makefile.am
+++ b/data/Nobile/Makefile.am
@@ -1,4 +1,4 @@
-installdir = $(datadir)/Nobile
+installdir = $(pkgdatadir)/Nobile
 
 dist_install_DATA = \
-	picon_default.png 
+		picon_default.png
