[CopyFiles] add progress bar to copy/move operations in MovieSelection.

--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -4,7 +4,7 @@ install_PYTHON = \
 	CronTimer.py Recordings.py Timershift.py LogManager.py CCcamInfo.py OScamInfo.py SkinSelector.py \
 	UserInterfacePositioner.py WizardUserInterfacePositioner.py PowerTimerEntry.py PowerTimerEdit.py \
 	\
-	AudioSelection.py ChannelSelection.py ClockDisplay.py ConfigMenu.py CopyFiles.py InfoBar.py \
+	AudioSelection.py ChannelSelection.py ClockDisplay.py ConfigMenu.py InfoBar.py \
 	Menu.py	MessageBox.py Screen.py ServiceScan.py TimerEdit.py \
 	MovieSelection.py Setup.py About.py HarddiskSetup.py FixedMenu.py \
 	Satconfig.py ScanSetup.py NetworkSetup.py Ci.py TimerEntry.py Volume.py \
