modified:   Makefile.am 	modified:   skin_display220_picon.xml 	modified:   skin_display96.xml 	modified:   ../po/de.po

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -28,7 +28,7 @@ endif
 
 if HAVE_COLORLCD220
 SUBDIRS += lcd220
-dist_pkgdata_DATA += skin_display96.xml
+dist_pkgdata_DATA += skin_display220_picon.xml skin_display220_no_picon.xml
 endif
 
 if HAVE_BWLCD255
