[icons] add some missing skinable images.

--- a/configure.ac
+++ b/configure.ac
@@ -271,6 +271,7 @@ data/skin_default/spinner/Makefile
 data/skin_default/GraphEPG/Makefile
 data/skin_default/lcd/Makefile
 data/skin_default/piconbg/Makefile
+data/skin_default/extensions/Makefile
 include/Makefile
 lib/Makefile
 lib/base/eenv.cpp
