--- a/configure.ac
+++ b/configure.ac
@@ -314,6 +314,22 @@ lib/python/Plugins/PLi/SoftcamSetup/locale/sl/LC_MESSAGES/Makefile
 lib/python/Plugins/PLi/SoftcamSetup/locale/sl/Makefile
 lib/python/Plugins/PLi/SoftcamSetup/Makefile
 lib/python/Plugins/Makefile
+lib/python/Plugins/Extensions/2IB/Makefile
+lib/python/Plugins/Extensions/MenuSort/Makefile
+lib/python/Plugins/Extensions/PluginHider/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/de/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/fa/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/it/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/de/LC_MESSAGES/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/fa/LC_MESSAGES/Makefile
+lib/python/Plugins/Extensions/PluginHider/locale/it/LC_MESSAGES/Makefile
+lib/python/Plugins/Extensions/VirtualZap/Makefile
+lib/python/Plugins/Extensions/VirtualZap/locale/Makefile
+lib/python/Plugins/Extensions/VirtualZap/locale/de/Makefile
+lib/python/Plugins/Extensions/VirtualZap/locale/it/Makefile
+lib/python/Plugins/Extensions/VirtualZap/locale/de/LC_MESSAGES/Makefile
+lib/python/Plugins/Extensions/VirtualZap/locale/it/LC_MESSAGES/Makefile
 lib/python/Plugins/DemoPlugins/Makefile
 lib/python/Plugins/DemoPlugins/TPMDemo/Makefile
 lib/python/Plugins/DemoPlugins/TestPlugin/Makefile
