--- a/lib/python/Plugins/Extensions/Makefile.am
+++ b/lib/python/Plugins/Extensions/Makefile.am
@@ -1,6 +1,6 @@
 installdir = $(pkglibdir)/python/Plugins/Extensions
 
-SUBDIRS = 2IB TuxboxPlugins CutListEditor PicturePlayer MenuSort PluginHider MediaScanner MediaPlayer SocketMMI DVDBurn Modem VirtualZap
+SUBDIRS = 2IB TuxboxPlugins CutListEditor PicturePlayer MenuSort PluginHider MediaScanner MediaPlayer SocketMMI DVDBurn Modem VirtualZap ZapHistoryBrowser
 
 if HAVE_LIBDDVD
 SUBDIRS += DVDPlayer
