--- a/data/skin_default/Makefile.am
+++ b/data/skin_default/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = menu icons buttons spinner GraphEPG lcd piconbg extensions
+SUBDIRS = countries menu icons buttons spinner GraphEPG lcd piconbg extensions
 
 installdir = $(pkgdatadir)/skin_default
 
