[skin] move embedded skins in python files into skin_default.xml.

--- a/data/skin_default/Makefile.am
+++ b/data/skin_default/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = countries menu icons buttons spinner GraphEPG lcd piconbg extensions
+SUBDIRS = countries menu icons buttons spinner epg lcd piconbg extensions
 
 installdir = $(pkgdatadir)/skin_default
 
