[skin] fix build for new default skin.

--- a/data/skin_default/extensions/Makefile.am
+++ b/data/skin_default/extensions/Makefile.am
@@ -1,7 +1,3 @@
 installdir = $(pkgdatadir)/skin_default/extensions
 
-dist_install_DATA = \
-	directory.png \
-	movie.png \
-	music.png \
-	picture.png
+dist_install_DATA = *.png
