--- a/data/skin_default/Makefile.am
+++ b/data/skin_default/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = countries menu icons buttons spinner epg lcd piconbg extensions
+SUBDIRS = border buttons countries crossepg dvr epg extensions icons infobar lcd logos menu piconbg spinner window
 
 installdir = $(pkgdatadir)/skin_default
 
