new vfd skins with preview ... thanks to satinfo76

--- a/data/vfd_skin/Makefile.am
+++ b/data/vfd_skin/Makefile.am
@@ -4,6 +4,10 @@ if HAVE_COLORLCD220
 dist_install_DATA = skin_display220*
 endif
 
+if HAVE_COLORLCD220
+dist_install_DATA = noprev.png
+endif
+
 if HAVE_BWLCD255
 dist_install_DATA = skin_display255*
 endif
