--- a/data/vfd_skin/Makefile.am
+++ b/data/vfd_skin/Makefile.am
@@ -1,13 +1,9 @@
 installdir = $(pkgdatadir)/vfd_skin
 
 if HAVE_COLORLCD220
-dist_install_DATA = skin_display220*
-endif
-
-if HAVE_COLORLCD220
-dist_install_DATA = noprev.png
+dist_install_DATA = skin_display220* noprev.png
 endif
 
 if HAVE_BWLCD255
-dist_install_DATA = skin_display255*
+dist_install_DATA = skin_display255* noprev.png
 endif
