--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -11,7 +11,7 @@ dist_pkgdata_DATA = \
 	skin_default.xml \
 	skin_subtitles.xml \
 	skin.xml \
-	Skin_ExtPlugins.xml
+	Skin_ExtPlugins.xml \
 	startwizard.xml \
 	userinterfacepositionerwizard.xml \
 	freesat.t1 \
