[Default skin] One more step in harmonising menu's and code clean-up. Still not done....

--- a/data/skin_default/Makefile.am
+++ b/data/skin_default/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = border buttons countries crossepg dvr epg extensions icons infobar lcd logos menu piconbg spinner window
+SUBDIRS = border busy buttons countries crossepg dvr epg extensions icons infobar lcd logos menu piconbg spinner window
 
 installdir = $(pkgdatadir)/skin_default
 
