[display] add new Display Skin selector, and allow display skins packs for feeds.

--- a/configure.ac
+++ b/configure.ac
@@ -242,8 +242,10 @@ data/Makefile
 data/fonts/Makefile
 data/extensions/Makefile
 data/keymaps/Makefile
-data/lcd220/Makefile
-data/lcd255/Makefile
+data/displaytext/Makefile
+data/display96/Makefile
+data/display220/Makefile
+data/display255/Makefile
 data/rc_models/Makefile
 data/rc_models/dmm0/Makefile
 data/rc_models/dmm1/Makefile
