--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -20,19 +20,17 @@ dist_pkgdata_DATA = \
 	hd-testcard.mvi
 
 if HAVE_TEXTLCD
-dist_pkgdata_DATA += skin_text.xml
+SUBDIRS += displaytext
 endif
 
 if HAVE_COLORLCD
-dist_pkgdata_DATA += skin_display96.xml
+SUBDIRS += display96
 endif
 
 if HAVE_COLORLCD220
-SUBDIRS += lcd220
-dist_pkgdata_DATA += skin_display220_picon.xml skin_display220_no_picon.xml
+SUBDIRS += display220
 endif
 
 if HAVE_BWLCD255
-SUBDIRS += lcd255
-dist_pkgdata_DATA += skin_display255_picon.xml skin_display255_no_picon.xml
+SUBDIRS += display255
 endif
