--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -8,6 +8,7 @@ dist_pkgdata_DATA = \
 	black.mvi \
 	rcpositions.xml \
 	setup.xml \
+	CommonSkin.xml \
 	skin_default.xml \
 	skin_subtitles.xml \
 	skin.xml \
