ReAdded NetworkBrowser for Tryouts

--- a/lib/python/Plugins/SystemPlugins/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = SoftwareManager PositionerSetup Satfinder \
 	DefaultServicesScanner CommonInterfaceAssignment \
 	HdmiCEC VideoClippingSetup \
 	VideoEnhancement WirelessLan NetworkWizard \
-	SABnzbdSetup OSD3DSetup DeviceManager SwapManager
+	SABnzbdSetup OSD3DSetup DeviceManager SwapManager NetworkBrowser
 
 if XTREND
 SUBDIRS += SatelliteEquipmentControl DiseqcTester
